2005-10-30  Luc Teirlinck  <teirllm@auburn.edu>

	* comint.el (comint-send-input): Call `comint-update-fence' when
	`comint-process-echoes' and `comint-prompt-read-only' are both
	non-nil, to avoid leftover read-only newline.

2005-10-30  Richard M. Stallman  <rms@gnu.org>

	* textmodes/flyspell.el (flyspell-external-point-words):
	Detect when WORD can't be checked properly because
	flyspell-get-word finds just part of it, and move on.

	* textmodes/ispell.el (ispell-dictionary-alist-5): Add . as
	boundarychar for Polish.
	(ispell-dictionary-alist-4): Add . as boundarychar for Italian.
	(ispell-dictionary-alist-3): Add . and @ as boundarychars for French.

2005-10-31  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-tooltip-print-1): Fix regexp.
	(gdb-registers-font-lock-keywords): Delete.
	(gdb-registers-mode): Don't fontify.
	(gdb-info-registers-custom): Use text properties instead as, in
	future, changed register values will use font-lock-warning-face.
	(gdb-local-font-lock-keywords): Rename to...
	(gdb-locals-font-lock-keywords): ...for consistency.

2005-10-30  Andre Spiegel  <spiegel@gnu.org>

	* vc.el (vc-switch-backend): Better error message if the buffer is
	not visiting a file under version control.

	* vc-cvs.el (vc-cvs-delete-file): Commit the file after removing it.

2005-10-29  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Use ~/.emacs.d/init.el instead of
	~/.emacs.d/.emacs.

2005-10-29  Richard M. Stallman  <rms@gnu.org>

	* replace.el (occur-mode-mouse-goto): Always go to other window.
	(occur-mode-goto-occurrence): Always switch in same window.

	* simple.el (undo): Display message at end, not at start.

	* emacs-lisp/timer.el (timer-activate, timer-activate-when-idle):
	New arg REUSE-CELL.
	(cancel-timer-internal): New function.
	(timer-event-handler): Use cancel-timer-internal,
	and pass the cell it returns to timer-activate...

	* jit-lock.el (jit-lock-function, jit-lock-stealth-fontify)